fixing horizontal scroll items height for devices

--- a/src/app/components-css/HorizontalScroll.css
+++ b/src/app/components-css/HorizontalScroll.css
@@ -49,3 +49,16 @@
     display: none;
   }
 }
+
+@media (orientation: landscape) and (max-width: 700px) {
+  .scrollisgListItem a {
+  height: 55svh
+}
+}
+
+@media (orientation: portrait) {
+  .scrollisgListItem a {
+  height: 55vw
+}
+}
+
